// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box /> accepts a center prop 1`] = `
.c0 {
  color: unset;
  font-size: unset;
  margin: unset;
  text-align: center;
}

<div
  className="c0"
  color="unset"
  size="unset"
/>
`;

exports[`<Box /> accepts a margin prop 1`] = `
.c0 {
  color: unset;
  font-size: unset;
  margin: 0;
  text-align: left;
}

<div
  className="c0"
  color="unset"
  size="unset"
/>
`;

exports[`<Box /> accepts a size prop 1`] = `
.c0 {
  color: unset;
  font-size: 12px;
  margin: unset;
  text-align: left;
}

<div
  className="c0"
  color="unset"
  size="12px"
/>
`;

exports[`<Box /> renders correctly 1`] = `
.c0 {
  color: unset;
  font-size: unset;
  margin: unset;
  text-align: left;
}

<div
  className="c0"
  color="unset"
  size="unset"
/>
`;
